# elasticMl

./: .env.example  .gitignore  LLM_NOTES.md  README.md  demo.ipynb  elastic_ml.md  falcon.py  langchain_demo.ipynb  ml_node_api_json  pyproject.toml
MLjobs/: detectors.json  dsl_queries.json
MLjobs/res/: datafeed_config.json  job_config.json
notebooqs/: langchain_demo.ipynb  llama_listener.ipynb  open_llama.ipynb  quantize_lama.ipynb
res/: datafeed_multimetric.json  datafeed_preview.json  job_low_count.json  job_multimetric.json  linux_anomal_network_activity.json
src/: eland_demo.py  llama_listener.py  prompt_helpers.py  taskmanager.py
