[tool.poetry]
name = "elastic-cloud"
version = "0.1.0"
description = ""
authors = ["3lLobo <flocwolf@gmail.com>"]
readme = "README.md"
packages = [{include = "elastic_cloud"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pandas = "^2.0.2"
eland = "^8.7.0"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"
transformers = "^4.30.2"
langchain = "^0.0.210"
tabulate = "^0.9.0"
sentencepiece = "^0.1.99"
protobuf = "==3.20.*"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
